--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ coal-library==3.0.1
 comm==0.2.2
 contourpy==1.3.2
 cryptography==44.0.2
+curl_cffi==0.13.0
 cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
@@ -48,6 +49,7 @@ fire==0.7.0
 Flask==3.1.0
 fonttools==4.57.0
 fqdn==1.5.1
+frozendict==2.4.6
 fsspec==2025.3.2
 glfw==2.9.0
 google-ai-generativelanguage==0.6.15
@@ -107,6 +109,7 @@ mdurl==0.1.2
 mistune==3.1.3
 mpmath==1.3.0
 mujoco==3.3.1
+multitasking==0.0.12
 narwhals==2.0.0
 nbclient==0.10.2
 nbconvert==7.16.6
@@ -124,6 +127,7 @@ pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 patsy==1.0.1
+peewee==3.18.2
 pexpect==4.9.0
 pillow==11.2.1
 pin==3.4.0
@@ -207,7 +211,9 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+websockets==15.0.1
 Werkzeug==3.1.3
 widgetsnbextension==4.0.14
 xgboost==3.0.2
+yfinance==0.2.65
 zipp==3.21.0
