--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ cmeel-zlib==1.3.1
 coal-library==3.0.1
 comm==0.2.2
 contourpy==1.3.2
+cramjam==2.11.0
 cryptography==44.0.2
 curl_cffi==0.13.0
 cycler==0.12.1
@@ -44,6 +45,7 @@ esprima==4.0.1
 etils==1.12.2
 executing==2.2.0
 fastjsonschema==2.21.1
+fastparquet==2024.11.0
 filelock==3.18.0
 fire==0.7.0
 Flask==3.1.0
