--- a/requirements.txt
+++ b/requirements.txt
@@ -144,6 +144,7 @@ psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 py-cpuinfo==9.0.0
+pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybboxes==0.1.6
