--- a/environment.yml
+++ b/environment.yml
@@ -1,126 +1,241 @@
-name: base
+name: fe-course
 channels:
   - defaults
   - conda-forge
 dependencies:
-  - anaconda-anon-usage=0.4.4
-  - archspec=0.2.3
-  - boltons=23.0.0
+  - anyio=4.7.0
+  - aom=3.6.0
+  - appnope=0.1.4
+  - argon2-cffi=21.3.0
+  - argon2-cffi-bindings=21.2.0
+  - arrow-cpp=19.0.0
+  - asttokens=3.0.0
+  - async-lru=2.0.4
+  - attrs=24.3.0
+  - aws-c-auth=0.9.0
+  - aws-c-cal=0.9.2
+  - aws-c-common=0.12.3
+  - aws-c-compression=0.3.1
+  - aws-c-event-stream=0.5.5
+  - aws-c-http=0.10.2
+  - aws-c-io=0.20.1
+  - aws-c-mqtt=0.13.2
+  - aws-c-s3=0.8.3
+  - aws-c-sdkutils=0.2.4
+  - aws-checksums=0.2.7
+  - aws-crt-cpp=0.32.10
+  - aws-sdk-cpp=1.11.528
+  - babel=2.16.0
+  - beautifulsoup4=4.13.4
+  - blas=1.0
+  - bleach=6.2.0
+  - boost-cpp=1.82.0
+  - bottleneck=1.4.2
   - brotli-python=1.0.9
+  - brotlicffi=1.0.9.2
   - bzip2=1.0.8
   - c-ares=1.19.1
-  - ca-certificates=2025.7.15
+  - ca-certificates=2025.8.3
+  - cairo=1.16.0
   - certifi=2025.8.3
-  - cffi=1.16.0
+  - cffi=1.17.1
   - charset-normalizer=3.3.2
-  - conda=24.11.3
-  - conda-content-trust=0.2.0
-  - conda-libmamba-solver=24.7.0
-  - conda-package-handling=2.3.0
-  - conda-package-streaming=0.10.0
-  - cryptography=42.0.5
-  - distro=1.9.0
-  - expat=2.6.2
-  - fmt=9.1.0
-  - frozendict=2.4.2
+  - click=8.2.1
+  - comm=0.2.3
+  - conda-ecosystem-user-package-isolation=1.0
+  - contourpy=1.3.1
+  - cramjam=2.9.1
+  - cycler=0.11.0
+  - cyrus-sasl=2.1.28
+  - dav1d=1.2.1
+  - debugpy=1.8.11
+  - decorator=5.2.1
+  - defusedxml=0.7.1
+  - exceptiongroup=1.3.0
+  - executing=2.2.0
+  - expat=2.7.1
+  - fastparquet=2024.11.0
+  - fontconfig=2.14.1
+  - fonttools=4.55.3
+  - freetype=2.13.3
+  - fribidi=1.0.10
+  - fsspec=2025.7.0
+  - gettext=0.21.0
+  - gflags=2.2.2
+  - glog=0.5.0
+  - graphite2=1.3.14
+  - h11=0.16.0
+  - harfbuzz=10.2.0
+  - httpcore=1.0.9
+  - httpx=0.28.1
   - icu=73.1
   - idna=3.7
-  - jsonpatch=1.33
-  - jsonpointer=2.1
-  - krb5=1.20.1
-  - libarchive=3.6.2
-  - libcurl=8.7.1
-  - libcxx=14.0.6
-  - libedit=3.1.20230828
+  - importlib-metadata=8.7.0
+  - ipykernel=6.30.1
+  - ipython=9.4.0
+  - ipython_pygments_lexers=1.1.1
+  - ipywidgets=8.1.5
+  - jedi=0.19.2
+  - jinja2=3.1.6
+  - joblib=1.5.1
+  - jpeg=9e
+  - json5=0.9.25
+  - jsonschema=4.25.0
+  - jsonschema-specifications=2023.7.1
+  - jupyter=1.1.1
+  - jupyter-lsp=2.2.5
+  - jupyter_client=8.6.3
+  - jupyter_console=6.6.3
+  - jupyter_core=5.8.1
+  - jupyter_events=0.12.0
+  - jupyter_server=2.16.0
+  - jupyter_server_terminals=0.5.3
+  - jupyterlab=4.4.4
+  - jupyterlab_pygments=0.3.0
+  - jupyterlab_server=2.27.3
+  - jupyterlab_widgets=3.0.15
+  - kiwisolver=1.4.8
+  - krb5=1.21.3
+  - lcms2=2.16
+  - lerc=4.0.0
+  - libabseil=20250127.0
+  - libavif=1.1.1
+  - libboost=1.82.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcurl=8.14.1
+  - libcxx=19.1.7
+  - libdeflate=1.22
+  - libedit=3.1.20250104
   - libev=4.33
+  - libevent=2.1.12
   - libffi=3.4.4
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
+  - libglib=2.84.2
+  - libgrpc=1.71.0
   - libiconv=1.16
-  - libmamba=1.5.8
-  - libmambapy=1.5.8
+  - libkrb5=1.21.3
   - libnghttp2=1.57.0
-  - libsolv=0.7.24
-  - libssh2=1.11.0
-  - libxml2=2.10.4
+  - libopenblas=0.3.29
+  - libpng=1.6.39
+  - libpq=17.4
+  - libprotobuf=5.29.3
+  - libre2-11=2024.07.02
+  - libsodium=1.0.20
+  - libssh2=1.11.1
+  - libthrift=0.15.0
+  - libtiff=4.7.0
+  - libwebp-base=1.3.2
+  - libxml2=2.13.8
+  - llvm-openmp=19.1.7
+  - lmdb=0.9.31
   - lz4-c=1.9.4
-  - menuinst=2.1.2
-  - ncurses=6.4
-  - openssl=3.0.17
-  - packaging=24.1
+  - markupsafe=3.0.2
+  - matplotlib=3.10.0
+  - matplotlib-base=3.10.0
+  - matplotlib-inline=0.1.7
+  - mistune=3.1.2
+  - mysql=8.4.0
+  - nbclient=0.10.2
+  - nbconvert=7.16.6
+  - nbconvert-core=7.16.6
+  - nbconvert-pandoc=7.16.6
+  - nbformat=5.10.4
+  - ncurses=6.5
+  - nest-asyncio=1.6.0
+  - notebook=7.4.4
+  - notebook-shim=0.2.4
+  - numexpr=2.11.0
+  - numpy=2.3.1
+  - numpy-base=2.3.1
+  - openjpeg=2.5.2
+  - openldap=2.6.4
+  - openssl=3.5.2
+  - orc=2.1.1
+  - overrides=7.4.0
+  - packaging=25.0
+  - pandas=2.3.1
+  - pandoc=2.12
+  - pandocfilters=1.5.0
+  - parso=0.8.4
   - pcre2=10.42
-  - pip=24.2
-  - platformdirs=3.10.0
-  - pluggy=1.0.0
-  - pybind11-abi=5
-  - pycosat=0.6.6
+  - pexpect=4.9.0
+  - pickleshare=0.7.5
+  - pillow=11.3.0
+  - pip=25.1
+  - pixman=0.40.0
+  - platformdirs=4.3.8
+  - prometheus_client=0.21.1
+  - prompt-toolkit=3.0.51
+  - prompt_toolkit=3.0.51
+  - psutil=5.9.0
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.3
+  - pyarrow=19.0.0
   - pycparser=2.21
+  - pygments=2.19.2
+  - pyparsing=3.2.0
+  - pyqt=6.7.1
+  - pyqt6-sip=13.9.1
   - pysocks=1.7.1
-  - python=3.12.4
-  - python.app=3
-  - readline=8.2
-  - reproc=14.2.4
-  - reproc-cpp=14.2.4
-  - requests=2.32.3
-  - ruamel.yaml=0.17.21
+  - python=3.11.13
+  - python-dateutil=2.9.0.post0
+  - python-dotenv=1.1.0
+  - python-fastjsonschema=2.20.0
+  - python-json-logger=3.2.1
+  - python-tzdata=2025.2
+  - pytz=2025.2
+  - pyyaml=6.0.2
+  - pyzmq=26.2.0
+  - qtbase=6.7.3
+  - qtconsole=5.6.1
+  - qtdeclarative=6.7.3
+  - qtpy=2.4.1
+  - qtsvg=6.7.3
+  - qttools=6.7.3
+  - qtwebchannel=6.7.3
+  - qtwebsockets=6.7.3
+  - re2=2024.07.02
+  - readline=8.3
+  - referencing=0.30.2
+  - requests=2.32.4
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
+  - rpds-py=0.22.3
+  - scikit-learn=1.7.1
+  - scipy=1.16.0
+  - send2trash=1.8.2
   - setuptools=72.1.0
-  - sqlite=3.45.3
+  - sip=6.10.0
+  - six=1.17.0
+  - snappy=1.2.1
+  - sniffio=1.3.0
+  - soupsieve=2.5
+  - sqlite=3.50.2
+  - stack_data=0.6.3
+  - terminado=0.17.1
+  - threadpoolctl=3.5.0
+  - tinycss2=1.4.0
   - tk=8.6.14
-  - tqdm=4.66.4
-  - truststore=0.8.0
-  - urllib3=2.2.2
-  - wheel=0.43.0
-  - xz=5.4.6
-  - yaml-cpp=0.8.0
+  - tornado=6.5.1
+  - traitlets=5.14.3
+  - typing-extensions=4.14.1
+  - typing_extensions=4.14.1
+  - tzdata=2025b
+  - unicodedata2=15.1.0
+  - urllib3=2.5.0
+  - utf8proc=2.6.1
+  - wcwidth=0.2.13
+  - webencodings=0.5.1
+  - websocket-client=1.8.0
+  - wheel=0.45.1
+  - widgetsnbextension=4.0.13
+  - xz=5.6.4
+  - yaml=0.2.5
+  - zeromq=4.3.5
+  - zipp=3.23.0
   - zlib=1.2.13
-  - zstandard=0.22.0
-  - zstd=1.5.5
-  - pip:
-      - annotated-types==0.7.0
-      - anyio==4.8.0
-      - blinker==1.9.0
-      - click==8.1.8
-      - contourpy==1.3.1
-      - cycler==0.12.1
-      - filelock==3.17.0
-      - flask==3.1.0
-      - flask-cors==5.0.0
-      - flask-sock==0.7.0
-      - fonttools==4.56.0
-      - fsspec==2025.2.0
-      - groq==0.18.0
-      - h11==0.14.0
-      - httpcore==1.0.7
-      - httpx==0.28.1
-      - itsdangerous==2.2.0
-      - jinja2==3.1.5
-      - kiwisolver==1.4.8
-      - markupsafe==3.0.2
-      - matplotlib==3.10.0
-      - mpmath==1.3.0
-      - networkx==3.4.2
-      - numpy==2.1.1
-      - opencv-python==4.11.0.86
-      - pandas==2.2.3
-      - pillow==11.1.0
-      - psutil==6.1.1
-      - py-cpuinfo==9.0.0
-      - pydantic==2.10.6
-      - pydantic-core==2.27.2
-      - pyparsing==3.2.1
-      - python-dateutil==2.9.0.post0
-      - python-dotenv==1.0.1
-      - pytz==2025.1
-      - pyyaml==6.0.2
-      - scipy==1.15.1
-      - seaborn==0.13.2
-      - simple-websocket==1.1.0
-      - six==1.17.0
-      - sniffio==1.3.1
-      - sympy==1.13.1
-      - torch==2.6.0
-      - torchvision==0.21.0
-      - typing-extensions==4.12.2
-      - tzdata==2025.1
-      - ultralytics==8.3.73
-      - ultralytics-thop==2.0.14
-      - werkzeug==3.1.3
-      - wsproto==1.2.0
+  - zstd=1.5.6
+prefix: /Users/Kushal/miniconda3/envs/fe-course
