fix homework structure verify hw1-6; start real project data next

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ nbsync
 api_scrape_data.py
 data_storage.py
 python_fundamentals_summary.py
+stage05_data-storage_homework-starter.py
+stage06_data-preprocessing_homework-starter.py
