Finish Project 1-6 requirements

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ fraud_kaggle_creditcard_source-kaggle_dataset-creditcardfraud_20250820-192958.cs
 util_20250820-213510.parquet
 util_20250820-213510.csv
 fraud_kaggle_creditcard_source-kaggle_dataset-creditcardfraud_20250820-213245.parquet
+fraud_kaggle_creditcard_source-kaggle_dataset-creditcardfraud_20250820-213245_cleaned.csv
