Add homework 7-9, update yml

--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ fonttools==4.57.0
 fqdn==1.5.1
 frozendict==2.4.6
 fsspec==2025.3.2
+git-filter-repo==2.47.0
 glfw==2.9.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
@@ -98,6 +99,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.14
 jupytext==1.17.2
+kagglehub==0.3.12
 kiwisolver==1.4.8
 lap==0.5.12
 lark==1.2.2
