--- a/environment.yml
+++ b/environment.yml
@@ -29,6 +29,7 @@ dependencies:
   - beautifulsoup4=4.13.4=py311hca03da5_0
   - blas=1.0=openblas
   - bleach=6.2.0=py311hca03da5_0
+  - blinker=1.9.0=py311hca03da5_0
   - boost-cpp=1.82.0=h48ca7d4_2
   - bottleneck=1.4.2=py311hb9f6ed7_0
   - brotli-python=1.0.9=py311h313beb8_9
@@ -56,6 +57,7 @@ dependencies:
   - executing=2.2.0=pyhd8ed1ab_0
   - expat=2.7.1=h313beb8_0
   - fastparquet=2024.11.0=py311h12bd487_1
+  - flask=3.1.0=py311hca03da5_0
   - fontconfig=2.14.1=h6402c1e_3
   - fonttools=4.55.3=py311h80987f9_0
   - freetype=2.13.3=h47d26ad_0
@@ -76,6 +78,7 @@ dependencies:
   - ipython=9.4.0=pyhfa0c392_0
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
   - ipywidgets=8.1.5=py311hca03da5_0
+  - itsdangerous=2.2.0=py311hca03da5_0
   - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.6=py311hca03da5_0
   - joblib=1.5.1=py311hca03da5_0
@@ -234,6 +237,7 @@ dependencies:
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - webencodings=0.5.1=py311hca03da5_1
   - websocket-client=1.8.0=py311hca03da5_0
+  - werkzeug=3.1.3=py311hca03da5_0
   - wheel=0.45.1=py311hca03da5_0
   - widgetsnbextension=4.0.13=py311hca03da5_0
   - xz=5.6.4=h80987f9_1
